// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders <AddServiceForm /> without throwing 1`] = `
.c4 {
  margin-top: 0.1875rem;
}

.c6 {
  margin-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c9 + button {
  margin-left: 0.375rem;
}

.c8 {
  display: inline-block;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c7:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c7:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c7:active,
.c7:active:hover,
.c7:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c7[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c10 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 0.25rem;
}

.c2 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c5::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:invalid {
  box-shadow: none;
}

.c5:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c5:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
    wrap={true}
  >
    <div
      className="c1"
    >
      <div
        className="baseline-jVaZNU kXgQxt c2"
        name="name"
        role="group"
        style={undefined}
      >
        <label
          className="c3"
          htmlFor="k"
        >
          Attach to new CNS service name
        </label>
        <div
          className="c4"
        >
          <input
            className="c5"
            disabled={false}
            id="k"
            onBlur={null}
            placeholder="Example: mySQLdb"
            required={true}
          />
        </div>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c6"
      >
        <button
          className="c7 c8 c9"
          href=""
          type="submit"
        >
          Add
        </button>
        <div
          className="c10 c11"
          height="0.25rem"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`renders <AddServiceForm pristine /> without throwing 1`] = `
.c4 {
  margin-top: 0.1875rem;
}

.c6 {
  margin-left: 0.75rem;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-align-items: flex-end;
  -webkit-box-align: flex-end;
  -ms-flex-align: flex-end;
  align-items: flex-end;
}

.c1 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c9 {
  font-family: sans-serif;
  font-size: 100%;
  line-height: 1.15;
  margin: 0;
  overflow: visible;
  text-transform: none;
  -webkit-appearance: button;
  -moz-appearance: button;
  appearance: button;
  min-width: 7.5rem;
}

.c9::-moz-focus-inner,
.c9[type='button']::-moz-focus-inner,
.c9[type='reset']::-moz-focus-inner,
.c9[type='submit']::-moz-focus-inner {
  border-style: none;
  padding: 0;
}

.c9:-moz-focusring,
.c9[type='button']:-moz-focusring,
.c9[type='reset']:-moz-focusring,
.c9[type='submit']:-moz-focusring {
  outline: 0.0625rem dotted ButtonText;
}

.c9 + button {
  margin-left: 0.375rem;
}

.c8 {
  display: inline-block;
}

.c7 {
  box-sizing: border-box;
  display: inline-block;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  min-height: 3rem;
  height: 3rem;
  min-width: 7.5rem;
  padding: 0.9375rem 1.125rem;
  position: relative;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  font-size: 0.9375rem;
  text-align: center;
  font-style: normal;
  font-stretch: normal;
  line-height: normal;
  -webkit-letter-spacing: normal;
  -moz-letter-spacing: normal;
  -ms-letter-spacing: normal;
  letter-spacing: normal;
  text-decoration: none;
  white-space: nowrap;
  vertical-align: middle;
  touch-action: manipulation;
  cursor: pointer;
  color: rgb(255,255,255);
  -webkit-text-fill-color: currentcolor;
  background-image: none;
  background-color: rgb(59,70,204);
  border-radius: 0.25rem;
  border: solid 0.0625rem rgb(45,56,132);
}

.c7:focus {
  outline: 0;
  text-decoration: none;
  background-color: rgb(59,70,204);
  border-color: rgb(45,56,132);
}

.c7:hover {
  background-color: rgb(72,83,217);
  border: solid 0.0625rem rgb(45,56,132);
}

.c7:active,
.c7:active:hover,
.c7:active:focus {
  background-image: none;
  outline: 0;
  background-color: rgb(45,56,132);
  border-color: rgb(45,56,132);
}

.c7[disabled] {
  cursor: not-allowed;
  pointer-events: none;
}

.c3 {
  font-size: 0.9375rem;
  line-height: 1.125rem;
  font-style: normal;
  font-stretch: normal;
  display: block;
  color: rgb(70,70,70);
  text-align: left;
  margin-right: 0.75rem;
  font-weight: 600;
  white-space: pre;
  font-size: 0.8125rem;
}

.c11 {
  box-sizing: border-box;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex: 1 1 auto;
  -ms-flex: 1 1 auto;
  flex: 1 1 auto;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  margin-right: -0.625rem;
  margin-left: -0.625rem;
}

.c10 {
  background-color: rgb(216,216,216);
  margin: 0;
  background-color: transparent;
  height: 0.25rem;
}

.c2 {
  display: inline-block;
  margin: 0;
  padding: 0;
  border: none;
  overflow: hidden;
  height: auto;
  -webkit-margin-start: 0;
  -webkit-margin-end: 0;
  -webkit-padding-before: 0;
  -webkit-padding-start: 0;
  -webkit-padding-end: 0;
  -webkit-padding-after: 0;
}

.c5 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgba(73,73,73,1);
  max-width: 22.1875rem;
  text-overflow: ellipsis;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c5::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:invalid {
  box-shadow: none;
}

.c5:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c5:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c5:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

<form
  onSubmit={undefined}
>
  <div
    className="c0"
    wrap={true}
  >
    <div
      className="c1"
    >
      <div
        className="baseline-jVaZNU kXgQxt c2"
        name="name"
        role="group"
        style={undefined}
      >
        <label
          className="c3"
          htmlFor="l"
        >
          Attach to new CNS service name
        </label>
        <div
          className="c4"
        >
          <input
            className="c5"
            disabled={false}
            id="l"
            onBlur={null}
            placeholder="Example: mySQLdb"
            required={true}
          />
        </div>
      </div>
    </div>
    <div
      className="c1"
    >
      <div
        className="c6"
      >
        <button
          className="c7 c8 c9"
          href=""
          type="submit"
        >
          Add
        </button>
        <div
          className="c10 c11"
          height="0.25rem"
        />
      </div>
    </div>
  </div>
</form>
`;

exports[`renders <Header/> without throwing 1`] = `
Array [
  .c0 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c0 + p,
.c0 + small,
.c0 + h1,
.c0 + h2,
.c0 + label,
.c0 + h3,
.c0 + h4,
.c0 + h5,
.c0 + div,
.c0 + span {
  margin-top: 1.5rem;
}

<h3
    className="c0"
>
    Hostnames
</h3>,
  .c0 {
  padding-bottom: 0.75rem;
}

.c1 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

<div
    className="c0"
>
    <p
        className="c1"
    >
        Default hostnames are automatically generated from both the instance name and any attached networks.
    </p>
</div>,
]
`;

exports[`renders <Hostname /> without throwing 1`] = `null`;

exports[`renders <Hostname values /> without throwing 1`] = `
.c9 {
  margin-top: 0.1875rem;
}

.c0 {
  margin-bottom: 1.5rem;
}

.c5 {
  margin-right: 0.375rem;
}

.c7 {
  margin-top: 0.1875rem;
  margin-bottom: 0.375rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-flex-wrap: nowrap;
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-align-content: stretch;
  -ms-flex-line-pack: stretch;
  align-content: stretch;
}

.c4 {
  -webkit-order: 0;
  -ms-flex-order: 0;
  order: 0;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  -webkit-box-flex: 0;
  -webkit-flex-grow: 0;
  -ms-flex-positive: 0;
  flex-grow: 0;
  -webkit-flex-shrink: 1;
  -ms-flex-negative: 1;
  flex-shrink: 1;
  display: block;
}

.c3 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
  font-weight: 600;
}

.c6 {
  font-size: 80%;
  font-family: "Libre Franklin",-apple-system,BlinkMacSystemFont,"Segoe UI",Roboto,Oxygen-Sans,Ubuntu,Cantarell,Helvetica,sans-serif;
  color: rgba(73,73,73,1);
  line-height: 1.125rem;
  font-size: 0.8125rem;
}

.c8 {
  box-sizing: border-box;
  width: 18.75rem;
  height: 3rem;
  min-height: 3rem;
  padding: 0.8125rem 1.125rem;
  border-radius: 0.25rem;
  background-color: rgb(255,255,255);
  border: 0.0625rem solid rgb(216,216,216);
  color: rgb(250,250,250);
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
  font-family: "Roboto Mono",monospace;
  width: 100%;
  min-width: 100%;
  font-size: 0.9375rem;
  line-height: normal !important;
  font-style: normal;
  font-stretch: normal;
  -webkit-appearance: none;
  -moz-appearance: none;
  appearance: none;
  outline: 0;
}

.c8::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:invalid {
  box-shadow: none;
}

.c8::-webkit-input-placeholder {
  color: rgb(216,216,216);
}

.c8::-moz-placeholder {
  color: rgb(216,216,216);
}

.c8:-ms-input-placeholder {
  color: rgb(216,216,216);
}

.c8:disabled {
  background-color: rgb(250,250,250);
  color: rgb(216,216,216);
  cursor: not-allowed;
}

.c8:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled::-moz-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,0.5);
}

.c8:disabled {
  color: rgba(73,73,73,1);
}

.c8:disabled::-webkit-input-placeholder {
  color: rgba(73,73,73,1);
}

.c8:disabled::-moz-placeholder {
  color: rgba(73,73,73,1);
}

.c8:disabled:-ms-input-placeholder {
  color: rgba(73,73,73,1);
}

.c8:focus {
  border-color: rgb(59,70,204);
  outline: 0;
}

.c2 {
  padding-right: 0.75rem;
  margin-right: 0.75rem;
  border-right: 0.0625rem solid rgb(216,216,216);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <small
      className="c2 c3"
    >
      Instance name
       
      hostname
      s
    </small>
    <div
      className="c4"
    >
      <div
        className="c5"
      >
        <svg
          className=""
          height="16"
          innerRef={undefined}
          style={
            Object {
              "transform": "rotate(0deg)",
            }
          }
          viewBox="0 0 12 16"
          width="12"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,6V4A4,4,0,0,0,2,4V6H2A2,2,0,0,0,0,8v6a2,2,0,0,0,2,2h8a2,2,0,0,0,2-2V8A2,2,0,0,0,10,6ZM4,4c0-1.65.35-2,2-2s2,.35,2,2V6H4Zm6,9a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V9A1,1,0,0,1,3,8H9a1,1,0,0,1,1,1ZM6,13H6a1,1,0,0,1-1-1V10A1,1,0,0,1,6,9H6a1,1,0,0,1,1,1v2A1,1,0,0,1,6,13Z"
            fill="rgba(73, 73, 73, 1)"
          />
        </svg>
      </div>
    </div>
    <div
      className="c4"
    >
      <small
        className="c6"
      >
        Private
      </small>
    </div>
  </div>
  <div
    className="c7"
  >
    <input
      className="c8"
      disabled={true}
      id=""
      onBlur={null}
      value="111"
    />
  </div>
  <div
    className="c9"
  >
    <input
      className="c8"
      disabled={true}
      id=""
      onBlur={null}
      value="111"
    />
  </div>
</div>
`;

exports[`renders <HostnamesHeader /> without throwing 1`] = `
.c0 {
  margin-top: 1.5rem;
}

.c2 {
  padding-bottom: 1.125rem;
}

.c3 {
  color: rgba(73,73,73,1);
  line-height: 1.5rem;
  font-size: 0.9375rem;
  margin: 0;
}

.c1 {
  color: rgba(73,73,73,1);
  font-weight: normal;
  line-height: 1.625rem;
  font-size: 1.3125rem;
  margin: 0;
}

.c1 + p,
.c1 + small,
.c1 + h1,
.c1 + h2,
.c1 + label,
.c1 + h3,
.c1 + h4,
.c1 + h5,
.c1 + div,
.c1 + span {
  margin-top: 1.5rem;
}

<div
  className="c0"
>
  <h3
    className="c1"
  >
    CNS service hostnames
  </h3>
  <div
    className="c2"
  >
    <p
      className="c3"
    >
      CNS service hostnames are created by attaching a CNS service name to one or more instances. You can serve multiple instances under the same hostname by assigning them to a matching CNS service name.
    </p>
  </div>
</div>
`;
